--- a/Functional_Group_Models.Rmd
+++ b/Functional_Group_Models.Rmd
@@ -525,6 +525,22 @@ ggsave("funct_la_plot.png", path = "~/github/Tejon_Functional_Traits/Figures", w
 
 
 ```
+
+#### ggeffects Graphs
+```{r}
+
+funct_la_plot <- plot(ggpredict(funct_la, terms = c("treatment", "climate", "functional_group")), facet = TRUE)
+funct_sla_plot <- plot(ggpredict(funct_sla, terms = c("treatment", "climate", "functional_group")), facet = TRUE)
+funct_ldmc_plot <- plot(ggpredict(funct_ldmc, terms = c("treatment", "climate", "functional_group")), facet = TRUE)
+funct_n_plot <- plot(ggpredict(funct_n, terms = c("treatment", "climate", "functional_group")), facet = TRUE)
+funct_seed_mass_plot <- plot(ggpredict(funct_seed_mass, terms = c("climate", "functional_group")), facet = TRUE)
+
+funct_group_CWM_emmeans <- grid.arrange(funct_la_plot, funct_sla_plot, funct_ldmc_plot, funct_n_plot, funct_seed_mass_plot)
+
+ggsave("funct_group_CWM_emmeans.png", plot = funct_group_CWM_emmeans, path = "~/github/Tejon_Functional_Traits/Figures/ggeffects_graphs", height = 7, width = 10)
+
+```
+
 #### using sjPlot
 ```{r}
 library(sjPlot)
